--- a/10-Regression.qmd
+++ b/10-Regression.qmd
@@ -8,7 +8,7 @@ source("_common.R")
 
 The roots of regression analysis can be traced back to the early 1700s, when [Isaac Newton](https://en.wikipedia.org/wiki/Isaac_Newton)’s method of fluxions laid the mathematical groundwork for continuous change, concepts that underpin modern optimization and calculus. The term *regression* was introduced by Sir Francis Galton in 1886 to describe how the heights of offspring tend to regress toward the mean height of their parents. Its mathematical foundations were later formalized by Legendre and Gauss through the method of least squares. What began as an observation in heredity has since evolved into a powerful tool for modeling relationships and making predictions from data. Thanks to advances in computing and tools like R, regression techniques are now scalable and accessible for solving complex, real-world problems.
 
-Across domains such as economics, medicine, and engineering, regression models support data-driven decisions, whether estimating the impact of advertising on sales, predicting housing prices, or identifying risk factors for disease. As Charles Wheelan writes in [*Naked Statistics*](https://www.goodreads.com/book/show/15786586-naked-statistics)[@wheelan2013naked], *"Regression modeling is the hydrogen bomb of the statistics arsenal."* Used wisely, it can guide powerful decisions; misapplied, it can produce misleading conclusions. A thoughtful approach is essential to ensure that findings are valid, actionable, and aligned with the goals of a data science project.
+Across domains such as economics, medicine, and engineering, regression models support data-driven decisions, whether estimating the impact of advertising on sales, predicting housing prices, or identifying risk factors for disease. As Charles Wheelan writes in [*Naked Statistics*](https://www.goodreads.com/book/show/15786586-naked-statistics) [@wheelan2013naked], *"Regression modeling is the hydrogen bomb of the statistics arsenal."* Used wisely, it can guide powerful decisions; misapplied, it can produce misleading conclusions. A thoughtful approach is essential to ensure that findings are valid, actionable, and aligned with the goals of a data science project.
 
 In this chapter, we continue building upon the *Data Science Workflow* introduced in Chapter [-@sec-ch2-intro-data-science] and illustrated in @fig-ch2_DSW. So far, our journey has included data preparation, exploratory analysis, and the application of two classification algorithms, *k-Nearest Neighbors* (Chapter [-@sec-ch7-classification-knn]) and *Naive Bayes* (Chapter [-@sec-ch9-bayes]), followed by tools for evaluating predictive performance (Chapter [-@sec-ch8-evaluation]). As introduced in Section [-@sec-ch2-machine-learning], supervised learning includes both classification and regression tasks. Regression models expand our ability to predict numeric outcomes and understand relationships among variables.
 
@@ -55,6 +55,10 @@ The dataset contains `r ncol(marketing)` variables and `r nrow(marketing)` obser
 
 In the following section, we explore the relationship between advertising spend and revenue to determine whether a linear model is appropriate.
 
+
+
+
+
 ### Exploring Relationships in the Data {.unnumbered}
 
 Before constructing a regression model, we first explore the relationships between variables to ensure that our assumptions hold and to identify strong predictors. This step also helps assess whether the relationship between variables appears linear, a key assumption in simple linear regression.
@@ -64,18 +68,17 @@ A useful tool for this is the `pairs.panels()` function from the **psych** packa
 ```{r, out.width = "100%"}
 library(psych)
 
-pairs.panels(marketing)
+pairs.panels(marketing[, -4], hist.col = "azure")
 ```
+Here we exclude the `display` variable (column 4) since it is categorical. This visualization includes:
 
-This visualization includes:
+-   *Correlation coefficients* (upper triangle), quantifying the strength of linear associations among all features.
 
--   *Scatter plots* (lower triangle), showing how each predictor relates to the response variable.
+-   *Scatter plots* (lower triangle), presenting pairwise relationships between variables.
 
 -   *Histograms* (diagonal), illustrating the distribution of each variable.
 
--   *Correlation coefficients* (upper triangle), quantifying the strength and direction of linear associations.
-
-From the correlation matrix, we observe that `spend` and `revenue` exhibit a *strong positive correlation* of `r round(cor(marketing$spend, marketing$revenue), 2)`. This indicates that *higher advertising expenditure is generally associated with higher revenue*, suggesting that `spend` is a promising predictor for modeling `revenue`. This correlation reflects the type of relationship we studied in Section [-@sec-ch5-correlation-test], where we examined how to quantify and test linear associations between numeric variables.
+From the correlation coefficients, we observe that `spend` and `revenue` exhibit a *strong positive correlation* of `r round(cor(marketing$spend, marketing$revenue), 2)`. This indicates that *higher advertising expenditure is generally associated with higher revenue*, suggesting that `spend` is a promising predictor for modeling `revenue`. This correlation reflects the type of relationship we studied in Section [-@sec-ch5-correlation-test], where we examined how to quantify and test linear associations between numeric variables.
 
 In the next section, we formalize this relationship using a *simple linear regression model*.
 
