--- a/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
+++ b/Data-Science-Foundations-and-Machine-Learning-with-R--From-Data-to-Decisions.tex
@@ -306,7 +306,7 @@
 \title{Data Science Foundations and Machine Learning with R: From Data
 to Decisions}
 \author{\href{https://www.uva.nl/profile/a.mohammadi}{{Reza Mohammadi}}}
-\date{29 September 2025}
+\date{30 September 2025}
 
 \begin{document}
 \maketitle
@@ -15278,7 +15278,7 @@ models support data-driven decisions, whether estimating the impact of
 advertising on sales, predicting housing prices, or identifying risk
 factors for disease. As Charles Wheelan writes in
 \href{https://www.goodreads.com/book/show/15786586-naked-statistics}{\emph{Naked
-Statistics}}(Wheelan 2013), \emph{``Regression modeling is the hydrogen
+Statistics}} (Wheelan 2013), \emph{``Regression modeling is the hydrogen
 bomb of the statistics arsenal.''} Used wisely, it can guide powerful
 decisions; misapplied, it can produce misleading conclusions. A
 thoughtful approach is essential to ensure that findings are valid,
@@ -15425,7 +15425,7 @@ pairwise relationships:
 \begin{Highlighting}[]
 \FunctionTok{library}\NormalTok{(psych)}
 
-\FunctionTok{pairs.panels}\NormalTok{(marketing)}
+\FunctionTok{pairs.panels}\NormalTok{(marketing[, }\SpecialCharTok{{-}}\DecValTok{4}\NormalTok{], }\AttributeTok{hist.col =} \StringTok{"azure"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
@@ -15433,21 +15433,22 @@ pairwise relationships:
 \includegraphics[width=1\linewidth,height=\textheight,keepaspectratio]{10-Regression_files/figure-pdf/unnamed-chunk-3-1.pdf}
 \end{center}
 
-This visualization includes:
+Here we exclude the \texttt{display} variable (column 4) since it is
+categorical. This visualization includes:
 
 \begin{itemize}
 \item
-  \emph{Scatter plots} (lower triangle), showing how each predictor
-  relates to the response variable.
+  \emph{Correlation coefficients} (upper triangle), quantifying the
+  strength of linear associations among all features.
+\item
+  \emph{Scatter plots} (lower triangle), presenting pairwise
+  relationships between variables.
 \item
   \emph{Histograms} (diagonal), illustrating the distribution of each
   variable.
-\item
-  \emph{Correlation coefficients} (upper triangle), quantifying the
-  strength and direction of linear associations.
 \end{itemize}
 
-From the correlation matrix, we observe that \texttt{spend} and
+From the correlation coefficients, we observe that \texttt{spend} and
 \texttt{revenue} exhibit a \emph{strong positive correlation} of 0.79.
 This indicates that \emph{higher advertising expenditure is generally
 associated with higher revenue}, suggesting that \texttt{spend} is a
