--- a/10-Regression.qmd
+++ b/10-Regression.qmd
@@ -55,10 +55,6 @@ The dataset contains `r ncol(marketing)` variables and `r nrow(marketing)` obser
 
 In the following section, we explore the relationship between advertising spend and revenue to determine whether a linear model is appropriate.
 
-
-
-
-
 ### Exploring Relationships in the Data {.unnumbered}
 
 Before constructing a regression model, we first explore the relationships between variables to ensure that our assumptions hold and to identify strong predictors. This step also helps assess whether the relationship between variables appears linear, a key assumption in simple linear regression.
@@ -68,7 +64,7 @@ A useful tool for this is the `pairs.panels()` function from the **psych** packa
 ```{r, out.width = "100%"}
 library(psych)
 
-pairs.panels(marketing[, -4], hist.col = "azure")
+pairs.panels(marketing[, -4])
 ```
 Here we exclude the `display` variable (column 4) since it is categorical. This visualization includes:
 
