--- a/1-Intro-R.qmd
+++ b/1-Intro-R.qmd
@@ -56,7 +56,7 @@ Regardless of the path you take, the most effective strategy is regular, deliber
 
 This mindset is well captured by James Clear’s concept of *The Power of Tiny Gains*, popularized in *Atomic Habits*: a 1% improvement each day may seem small, but it compounds into remarkable progress over time. [Figure @fig-ch1-tiny-gains], created entirely in R, illustrates this idea, and previews what you will soon be able to do: write code that explores ideas, generates plots, and communicates insights clearly and reproducibly.
 
-```{r fig-ch1-tiny-gains, echo = FALSE, out.width = "90%"}
+```{r fig-ch1-tiny-gains, echo = FALSE, out.width  = '70%'}
 #| fig-cap: "The Power of Tiny Gains: A 1% improvement every day leads to exponential growth over time. This plot was created entirely in R."
 
 x <- 0:365
@@ -67,13 +67,14 @@ df <- data.frame(
 )
 
 ggplot(df, aes(x = x, y = y, color = function_label)) +
-  geom_line(size = 0.5, arrow = arrow(length = unit(0.2, "cm"))) +
-  annotate("text", x = 215, y = 28, label = "1% better every day", color = "darkgreen", size = 5) +
-  annotate("text", x = 290, y = 2, label = "Static", color = "blue", size = 5) +
+  geom_line(size = 0.6, arrow = arrow(length = unit(0.2, "cm"))) +
+  annotate("text", x = 210, y = 27, label = "1% Better Every Day", color = "darkgreen", size = 5) +
+  annotate("text", x = 295, y = 3, label = "Static", color = "blue", size = 5) +
   labs(title = "The Power of Tiny Gains",
        x = "Days",
        y = "Improvement",
-       color = "Function") 
+       color = "Function") + #scale_color_manual(values=c("#CC6666", "#9999CC", "#66CC99"))
+  scale_color_manual(values=c("red", "darkgreen", "blue"))
 ```
 
 Learning R is not about mastering everything at once. It is about making steady progress, one concept at a time. With each small success (loading a dataset, creating a plot, writing a function), you are building skills that will support you throughout your data science journey. Be patient, stay curious, and trust the process. Growth in programming, as in data, is often exponential, just like the green line in [Figure @fig-ch1-tiny-gains].
@@ -128,7 +129,7 @@ RStudio is updated several times a year and typically notifies you when a new ve
 
 When you open RStudio for the first time, you will see a layout similar to [Figure @fig-RStudio-window-1]. This integrated interface is divided into four panels, each serving a specific purpose in your R workflow.
 
-```{r fig-RStudio-window-1, echo = FALSE, out.width = "80%"}
+```{r fig-RStudio-window-1, echo = FALSE}
 #| fig-cap: "The RStudio window when you first launch the program."
 
 knitr::include_graphics("images/ch1_RStudio-window-1.png")
@@ -214,7 +215,7 @@ To install a package using RStudio’s interface:
 
 See the screenshot in Figure [-@fig-install-packages] for a visual reference.
 
-```{r fig-install-packages, echo = FALSE, out.width = "80%"}
+```{r fig-install-packages, echo = FALSE}
 #| fig-cap: "Installing packages via the graphical interface in RStudio."
 
 knitr::include_graphics("images/ch1_RStudio-window-install.png")
@@ -540,7 +541,7 @@ Data structures are different from data types: data types describe *what* a valu
 
 The most commonly used structures in R include vectors, matrices, data frames, lists, and arrays. Each is suited to particular tasks and workflows. Figure [-@fig-R-objects] provides a visual overview of these core structures.
 
-```{r fig-R-objects, echo = FALSE, out.width = "50%"}
+```{r fig-R-objects, echo = FALSE, out.width = "55%"}
 #| fig-cap: "A visual guide to five common data structures in R, organized by dimensionality (1D, 2D, nD) and type uniformity (single vs. multiple types)."
 
 knitr::include_graphics("images/ch1_R-objects.png")
@@ -853,7 +854,7 @@ You add these layers using the `+` operator. This makes plots easy to build step
 
 Figure [-@fig-ggplot-layes] gives a visual summary of the seven main layers that form the backbone of any **ggplot2** visualization.
 
-```{r fig-ggplot-layes, echo = FALSE, out.width = "60%"}
+```{r fig-ggplot-layes, echo = FALSE, out.width = "78%"}
 #| fig-cap: "Grammar of Graphics and ggplot2 layers. The seven core layers of a ggplot: data, aesthetics, geometries, facets, statistics, coordinates, and theme."
 
 knitr::include_graphics("images/ch1_ggplot_layers.png")
@@ -1040,15 +1041,18 @@ R offers many built-in functions to generate random values from common statistic
 To make your results reproducible, always use `set.seed()` before generating random values.
 
 ::: {#ex-simulate-normal .example}
-**Example**: Simulate 100 values from a normal distribution with mean 50 and standard deviation 10.
+**Example**: Simulate 500 values from a normal distribution with mean 10 and standard deviation 2.
 
-```{r}
-set.seed(123)
+```{r, out.width = "60%"}
+set.seed(42)
 
-x <- rnorm(n = 100, mean = 50, sd = 10)
+x <- rnorm(n = 500, mean = 10, sd = 2)
 
 summary(x)
-hist(x, main = "Simulated Normal Data", col = "lightblue")
+
+ggplot(data.frame(x)) +
+  geom_histogram(aes(x = x), color = "white", fill = "#2C7BB6", bins = 30) +
+  labs(title = "Distribution of Simulated Data", x = "Values", y = "Frequency") 
 ```
 :::
 
@@ -1157,7 +1161,7 @@ When the document is rendered, R executes the code and inserts the output at the
 
 To run individual chunks interactively in RStudio, click the *Run* button at the top of the chunk or press `Ctrl + Shift + Enter`. See Figure [-@fig-run-chunk] for a visual reference.
 
-```{r fig-run-chunk, echo = FALSE, out.width = "80%"}
+```{r fig-run-chunk, echo = FALSE, out.width = "75%"}
 #| fig-cap: "Executing a code chunk in R Markdown using the 'Run' button in RStudio."
 knitr::include_graphics("images/ch1_run-chunk.png")
 ```
