--- a/12-Neural-networks.qmd
+++ b/12-Neural-networks.qmd
@@ -498,11 +498,11 @@ To visualize the effect of scaling, we compare the distribution of `age` before 
 #| fig-height: 4
 
 ggplot(data = train_set) +
-  geom_histogram(mapping = aes(x = age), colour = "darkblue", fill = "lightblue") +
+  geom_histogram(mapping = aes(x = age), color = "white", fill = "#2C7BB6") +
   ggtitle("Before min-max scaling")
 
 ggplot(data = train_scaled) +
-  geom_histogram(mapping = aes(x = age), colour = "darkblue", fill = "lightblue") +
+  geom_histogram(mapping = aes(x = age), color = "white", fill = "#2C7BB6") +
   ggtitle("After min-max scaling")
 ```
 
@@ -611,7 +611,7 @@ This produces the raw output activations for each observation. Since we are solv
 Let us examine the first few predicted outputs:
 
 ```{r}
-head(neuralnet_probs)
+round(head(neuralnet_probs), 2)
 ```
 
 To classify each customer, we compare the two activation values. If the activation for `deposit = "yes"` (column 2) is greater than the activation for `no` (column 1), we predict a subscription.
