--- a/13-Clustering.qmd
+++ b/13-Clustering.qmd
@@ -352,11 +352,11 @@ To visualize the effect of min-max scaling, we compare the distribution of the `
 #| fig-height: 4
 
 ggplot(data = cereal) +
-    geom_histogram(aes(x = sodium), color = "blue", fill = "lightblue") +
+    geom_histogram(aes(x = sodium), color = "white", fill = "#2C7BB6") +
     ggtitle("Before min-max scaling")
 
 ggplot(data = cereal_mm) +
-    geom_histogram(aes(x = sodium), color = "blue", fill = "lightblue") + 
+    geom_histogram(aes(x = sodium), color = "white", fill = "#2C7BB6") + 
     ggtitle("After min-max scaling")
 ```
 
