--- a/3-Data-preparation.qmd
+++ b/3-Data-preparation.qmd
@@ -180,7 +180,7 @@ The following histogram visualizes the distribution of the `y` variable (diamond
 
 ```{r, out.width = "60%"}
 ggplot(data = diamonds) +
-  geom_histogram(aes(x = y), binwidth = 0.5, color = 'blue', fill = "lightblue")
+  geom_histogram(aes(x = y), binwidth = 0.5, color = "white", fill = "#2C7BB6")
 ```
 
 In this full-scale view, the concentration of values between 2 and 6 mm is clear, but less frequent values, especially those beyond 15 mm, are hard to see due to scale compression.
@@ -189,7 +189,7 @@ To focus on the rare and extreme cases, we zoom in on the lower portion of the f
 
 ```{r, out.width = "60%"}
 ggplot(data = diamonds) +
-  geom_histogram(mapping = aes(x = y), binwidth = 0.5, color = 'blue', fill = "lightblue") +
+  geom_histogram(mapping = aes(x = y), binwidth = 0.5, color = "white", fill = "#2C7BB6") +
   coord_cartesian(ylim = c(0, 30))
 ```
 
@@ -381,12 +381,12 @@ To see min-max scaling in action, we apply it to the `carat` variable in the *di
 
 ggplot(data = diamonds) +
   geom_histogram(mapping = aes(x = carat), bins = 30,
-                 color = 'blue', fill = "lightblue") +
+                 color = "white", fill = "#2C7BB6") +
   ggtitle("Before min-max scaling") 
 
 ggplot(data = diamonds) +
   geom_histogram(mapping = aes(x = minmax(carat)), bins = 30,
-                 color = 'blue', fill = "lightblue") +
+                 color = "white", fill = "#2C7BB6") +
   ggtitle("After min-max scaling") 
 ```
 
@@ -417,12 +417,12 @@ To illustrate, let us apply z-score scaling to the `carat` variable in the *diam
 
 ggplot(data = diamonds) +
   geom_histogram(mapping = aes(x = carat), bins = 30,
-                 color = 'blue', fill = "lightblue") +
+                 color = "white", fill = "#2C7BB6") +
   ggtitle("Before z-score scaling") 
 
 ggplot(data = diamonds) +
   geom_histogram(mapping = aes(x = zscore(carat)), bins = 30,
-                 color = 'blue', fill = "lightblue") +
+                 color = "white", fill = "#2C7BB6") +
   ggtitle("After z-score scaling") 
 ```
 
@@ -701,11 +701,11 @@ To explore this further, we visualize the distribution using both a boxplot and 
 #| fig-height: 4
 
 ggplot(data = adult, aes(y = capital.loss)) +
-     geom_boxplot() +
+     geom_boxplot(color = "darkblue", fill = "#e5f4fb") +
      ggtitle("Boxplot of capital.loss")
 
 ggplot(data = adult, aes(x = capital.loss)) +
-     geom_histogram(bins = 30, color = "blue", fill = "lightblue") +
+     geom_histogram(bins = 30, color = "white", fill = "#2C7BB6") +
      ggtitle("Histogram of capital.loss")
 ```
 
@@ -721,11 +721,11 @@ To focus more closely on the nonzero values, we restrict our analysis to rows wh
 subset_adult <- subset(adult, capital.loss > 0)
 
 ggplot(data = subset_adult, aes(y = capital.loss)) +
-     geom_boxplot() +
+     geom_boxplot(color = "darkblue", fill = "#e5f4fb") +
      ggtitle("Boxplot of nonzero capital.loss")
 
 ggplot(data = subset_adult, aes(x = capital.loss)) +
-     geom_histogram(bins = 30, color = "blue", fill = "lightblue") +
+     geom_histogram(bins = 30, color = "white", fill = "#2C7BB6") +
      ggtitle("Histogram of nonzero capital.loss")
 ```
 
