--- a/9-Naive-Bayes.qmd
+++ b/9-Naive-Bayes.qmd
@@ -412,7 +412,7 @@ To assess the classification performance of the Naive Bayes model, we compute a 
 
 ```{r, out.width = "30%"}
 # Extract probability of "good risk"
-prob_naive_bayes = prob_naive_bayes[, 1] 
+prob_naive_bayes = prob_naive_bayes[, "good risk"] 
 
 conf.mat(prob_naive_bayes, test_labels, cutoff = 0.5, reference = "good risk")
 
